消息初步构建

--- a/BaseProject/BaseProject/Base.lproj/Main.storyboard
+++ b/BaseProject/BaseProject/Base.lproj/Main.storyboard
@@ -800,21 +800,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1fD-3p-e27">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
-                            </webView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="00W-Z1-ZO7">
+                                <rect key="frame" x="0.0" y="108" width="600" height="492"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1fD-3p-e27" firstAttribute="top" secondItem="w16-z5-0TP" secondAttribute="bottom" constant="44" id="5XN-RZ-NZb"/>
-                            <constraint firstAttribute="trailing" secondItem="1fD-3p-e27" secondAttribute="trailing" id="DHV-K3-Hhw"/>
-                            <constraint firstItem="1fD-3p-e27" firstAttribute="leading" secondItem="mLq-VZ-eSr" secondAttribute="leading" id="pTl-iL-3wA"/>
-                            <constraint firstItem="RtG-Ge-SiW" firstAttribute="top" secondItem="1fD-3p-e27" secondAttribute="bottom" id="ufj-ae-6HN"/>
+                            <constraint firstAttribute="trailing" secondItem="00W-Z1-ZO7" secondAttribute="trailing" id="AiN-EK-L8t"/>
+                            <constraint firstItem="00W-Z1-ZO7" firstAttribute="leading" secondItem="mLq-VZ-eSr" secondAttribute="leading" id="JTd-ga-ZA2"/>
+                            <constraint firstItem="RtG-Ge-SiW" firstAttribute="top" secondItem="00W-Z1-ZO7" secondAttribute="bottom" id="d1x-A0-vBH"/>
+                            <constraint firstItem="00W-Z1-ZO7" firstAttribute="top" secondItem="w16-z5-0TP" secondAttribute="bottom" constant="44" id="hGn-Xx-Kos"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="webView" destination="1fD-3p-e27" id="5A1-Va-FQQ"/>
+                        <outlet property="tableView" destination="00W-Z1-ZO7" id="jW8-DI-TWB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gFz-Kg-VzV" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -847,6 +847,6 @@
         <image name="icon144" width="144" height="144"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="3sY-2u-zF6"/>
+        <segue reference="51T-Yh-uY6"/>
     </inferredMetricsTieBreakers>
 </document>
