--- a/BaseProject/BaseProject/View/EmptyCommentCell.xib
+++ b/BaseProject/BaseProject/View/EmptyCommentCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,20 +15,41 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="109"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="暂无评价" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="im6-ea-07r">
-                        <rect key="frame" x="14" y="17" width="68" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="暂无评价" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="im6-ea-07r">
+                        <rect key="frame" x="12" y="10" width="52" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vQw-li-Elk">
-                        <rect key="frame" x="130" y="71" width="60" height="30"/>
-                        <state key="normal" title="我要评价"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vQw-li-Elk">
+                        <rect key="frame" x="109" y="72" width="103" height="29"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="29" id="U4i-9P-YNa"/>
+                            <constraint firstAttribute="width" constant="103" id="xVA-0f-rqe"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <state key="normal" title="我要评价">
+                            <color key="titleColor" red="0.28873866069999998" green="0.76532622920000004" blue="0.95024463380000002" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
                     </button>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="im6-ea-07r" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="9" id="6LW-ji-yqa"/>
+                    <constraint firstItem="im6-ea-07r" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="8NG-hG-f2v"/>
+                    <constraint firstItem="im6-ea-07r" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="4" id="AdF-ma-qdt"/>
+                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="im6-ea-07r" secondAttribute="trailing" constant="10" id="Qje-3f-fPu"/>
+                    <constraint firstItem="vQw-li-Elk" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="kHj-wh-WK5"/>
+                    <constraint firstItem="vQw-li-Elk" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="ni3-0O-htd"/>
+                </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="6LW-ji-yqa"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="commentButton" destination="vQw-li-Elk" id="hVG-VW-lGM"/>
+                <outlet property="label" destination="im6-ea-07r" id="Auo-9P-qZy"/>
             </connections>
             <point key="canvasLocation" x="305" y="316"/>
         </tableViewCell>
